# vutura_utm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  README.md
proto/: airmap_telemetry.proto  amessage.proto  messages.proto
python/: README.md  avoidance.py  build_proto.sh  listen_traffic.py  messages_pb2.py  socketcluster.py  stream_position.py  try_websocket.py  vutura_common_pb2.py
src/: event_loop.cpp  event_loop.hpp  test_event_loop.cpp
src/airmap_node/: CMakeLists.txt  airmap_communicator.hpp  airmap_config.h  airmap_config.json  airmap_main.cpp  airmap_node.c  airmap_node.cpp  airmap_node.hpp  airmap_telemetry.cpp  airmap_traffic.cpp  airmap_traffic.hpp  buffer.hpp  communicator.hpp  encryptor.hpp  udp_sender.hpp
src/avoidance_node/: CMakeLists.txt  avoidance_config.cpp  avoidance_config.hpp  avoidance_geo_tools.cpp  avoidance_geo_tools.h  avoidance_geometry.cpp  avoidance_geometry.hpp  avoidance_intruder.cpp  avoidance_intruder.hpp  avoidance_main.cpp  avoidance_node.cpp  avoidance_node.hpp
src/dronecode_sdk_node/: CMakeLists.txt  dronecode_node.cpp  dronecode_node.h  dronecode_sdk_main.cpp
src/event_loop/: event_loop.cpp  event_loop.hpp  test_event_loop.cpp
src/experimental_node/: CMakeLists.txt  better_timer.cpp  better_timer.hpp  event_generator.cpp  event_generator.hpp  experimental_loop.cpp  experimental_loop.hpp  experimental_main.cpp  experimental_node.cpp  experimental_node.hpp
src/mavlink_node/: CMakeLists.txt  mavlink_main.cpp  mavlink_node.c  mavlink_node.cpp  mavlink_node.h  mavlink_node.hpp
src/pprz_node/: CMakeLists.txt  pprz_main.cpp  pprz_node.cpp  pprz_node.hpp
src/sim_node/: CMakeLists.txt  sim_main.cpp  sim_node.cpp  sim_node.hpp
src/unifly_node/: CMakeLists.txt  unifly_config.cpp  unifly_config.h  unifly_config.hpp  unifly_main.cpp  unifly_node.cpp  unifly_node.hpp  websocket.cpp  websocket.hpp
src/utm_node/: utm_node.c
toolchains/: bebop-toolchain.cmake  disco-old-toolchain.cmake  disco-toolchain.cmake  rpi-toolchain.cmake
vutura_common/: CMakeLists.txt
vutura_common/include/vutura_common/: communicator.hpp  config.hpp  event_loop.hpp  event_source.hpp  helper.hpp  listener_replier.hpp  publisher.hpp  requester.hpp  subscription.hpp  timer.hpp  udp_source.hpp
vutura_common/proto/: vutura_common.proto
vutura_common/src/: communicator.cpp  event_loop.cpp  helper.cpp  listener_replier.cpp  publisher.cpp  requester.cpp  subscription.cpp  timer.cpp  udp_source.cpp
vutura_common/test/: test_event_loop.cpp
web_backend/: index.js  package-lock.json  package.json
web_interface/: .eslintrc.js  README.md  package-lock.json  package.json
web_interface/public/: index.html
web_interface/src/: App.vue  main.js
